--- a/utsprofil.html
+++ b/utsprofil.html
@@ -4,45 +4,95 @@
     <meta charset="UTF-8">
     <title>Profil Saya</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         body {
-            background-image: linear-gradient(aqua, blue);
-        }
-        #konten {
-            margin-bottom: 20px;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom right, #00d2ff, #3a47d5);
             color: white;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
         }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            h1 {
-                box-shadow: 0 0 8px rgba(0,0,0,0.3);
-                border-radius: 8px;
-                font-family: 'Times New Roman', Times, serif
-            }
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        #foto {
+
+        h1 {
+            font-size: 2.5em;
             text-align: center;
-            display: block;
-            margin: 10px auto;
+            margin-bottom: 20px;
+            background: linear-gradient(to right, orange, yellow);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            color: transparent;
+            font-weight: bold;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+        }
+
+        #foto {
             width: 150px;
             height: 175px;
             object-fit: cover;
-            border-radius: 8px;
-            box-shadow: 0 0 8px rgba(0,0,0,0.3);
+            border-radius: 12px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.4);
+            margin-bottom: 20px;
         }
 
+        #konten {
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
+            padding: 20px;
+            width: 90%;
+            max-width: 600px;
+            box-shadow: 0 0 12px rgba(0,0,0,0.3);
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            margin-top: 15px;
+            color: #ffffff;
+            border-bottom: 1px solid rgba(255,255,255,0.3);
+            padding-bottom: 5px;
+        }
+
+        ul {
+            list-style: circle inside;
+            padding-left: 0;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2em;
+            }
+            #konten {
+                padding: 15px;
+            }
+        }
     </style>
 </head>
 <body>
-    <h1 style="background-image: linear-gradient(to right, green, yellow); padding: 10px; text-align: center; color: linear_gradient(to right, lightblue, blue);">Halo, Saya Muhammad Haikal!</h1>
-    <img id="foto" src="profilhaikal.jpg" />
+    <h1>Halo, Saya Muhammad Haikal!</h1>
+    <img id="foto" src="profilhaikal.jpg" alt="Foto Profil">
 
     <div id="konten">
         <h2>Tentang Saya:</h2>
